media/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
spec:
  selector:
    app: jellyfin
  ports:
  - protocol: TCP
    port: 8096
    targetPort: 8096
    name: jellyfin-portal
  - protocol: UDP
    port: 7359
    targetPort: 7359
    name: jellyfin-udp
  type: ClusterIP
